test/error/iface/err5.rzy
interface
  Iface
    function funcA();
    function funcB();
  end

component
  Err5
    input
      in    : Iface;

    implementation elementary

  end

